# cassie_alip_mpc

./: README.md
cpp_alip_mpc/: CMakeLists.txt
cpp_alip_mpc/include/cassie_buses/: slrt_to_linux_data_t.h
cpp_alip_mpc/include/control/: Cassie_Fp_Controller.hpp
cpp_alip_mpc/include/kin/: p_COM_wrt_left_toe_src.c  p_COM_wrt_left_toe_src.h  p_COM_wrt_right_toe_src.c  p_COM_wrt_right_toe_src.h
cpp_alip_mpc/src/: copy_mpc_solver_libs.cpp  generate_mpc_solver_libs.cpp  main.cpp  test_solvers.cpp
cpp_alip_mpc/src/cassie_buses/: linux_to_slrt_data_t.c
cpp_alip_mpc/src/control/: Cassie_Fp_Controller.cpp
cpp_alip_mpc/src/solvers/mpc/: cassie_LS_simplempc_Ns2_Ni4_qrqp.c  cassie_LS_simplempc_Ns4_Ni4_qrqp.c  cassie_LS_simplempc_Ns6_Ni4_qrqp.c  cassie_LS_simplempc_Ns8_Ni4_qrqp.c  cassie_RS_simplempc_Ns2_Ni4_qrqp.c  cassie_RS_simplempc_Ns4_Ni4_qrqp.c  cassie_RS_simplempc_Ns6_Ni4_qrqp.c  cassie_RS_simplempc_Ns8_Ni4_qrqp.c
external_packages/casadi/external_packages/snopt-interface/snopt-interface/: Makefile.in  configure.ac
external_packages/casadi/external_packages/superscs/: .gitignore  .motd  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md  appveyor.yml  codecov.yml  scs.mk
external_packages/casadi/external_packages/superscs/.travis/: scs_after_success.sh  scs_script.sh
external_packages/casadi/external_packages/superscs/docs/: amatrix_8h.html  amatrix_8h_source.html  annotated.html  basic__doc__page_8h.html  basic__doc__page_8h_source.html  benchmarks__page_8h.html  benchmarks__page_8h_source.html  classes.html  cones_8h.html  cones_8h_source.html  cones__page_8h.html  cones__page_8h_source.html  constants_8h.html  constants_8h_source.html  contributing__page_8h.html  contributing__page_8h_source.html  cs_8h.html  cs_8h_source.html  ctrlc_8h.html  ctrlc_8h_source.html  cvx__examples__page_8h.html  cvx__examples__page_8h_source.html  dir_208d2690607c4e3d3fabfa1d18673d36.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_fb0086aade6051f3295c491b7001283a.html  directions_8h.html  directions_8h_source.html  directions__page_8h.html  directions__page_8h_source.html  examples__c__page_8h.html  examples__c__page_8h_source.html  examples_general.html  examples_in_c.html  files.html  functions.html  functions_vars.html  glbopts_8h.html  glbopts_8h_source.html  globals.html  globals_a.html  (+118 more)
external_packages/casadi/external_packages/superscs/docs/css-extra/: dox_extra.css
external_packages/casadi/external_packages/superscs/docs/data/: example.yml  liswet1.yml.txt  maros-meszaros-01.txt  maros-meszaros-02.txt  maros-meszaros-v2-01.txt  merge-checklist.txt
external_packages/casadi/external_packages/superscs/docs/html-extra/: scs-html-extra.html
external_packages/casadi/external_packages/superscs/docs/layout/: DoxygenLayout.xml
external_packages/casadi/external_packages/superscs/docs/man/: superscs.1
external_packages/casadi/external_packages/superscs/docs/search/: all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_3.js  defines_0.js  defines_1.js  defines_11.js  defines_12.js  defines_2.js  defines_5.js  defines_6.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  defines_d.js  defines_e.js  defines_f.js  enumvalues_0.js  enumvalues_2.js  files_0.js  (+55 more)
external_packages/casadi/external_packages/superscs/examples/c/: demo.c  problemUtils.h  randomSOCPProb.c  superscs_test.c
external_packages/casadi/external_packages/superscs/examples/python/: solveRandomConeProb.py
external_packages/casadi/external_packages/superscs/linsys/: CMakeLists.txt  common.c
external_packages/casadi/external_packages/superscs/linsys/direct/: private.c  private.h
external_packages/casadi/external_packages/superscs/linsys/gpu/: private.c  private.h
external_packages/casadi/external_packages/superscs/linsys/indirect/: CMakeLists.txt  private.c  private.h
external_packages/casadi/external_packages/superscs/matlab/: README.md  compile_direct.m  compile_gpu.m  compile_indirect.m  csc_to_sparse.c  csc_to_sparse.m  get_scs_rootdir.m  make_scs.m  scs.m  scs_direct.m  scs_indirect.m  scs_mex.c  scs_set_options.m  scs_version_mex.c  sparse_to_csc.c  sparse_to_csc.m  write_scs_data.m
external_packages/casadi/external_packages/superscs/matlab/@SifObject/: SifObject.m  clear_data.m  delegate_section.m  get_row_idx.m  get_variable_idx.m  make_ACq.m  make_Q.m  make_bc.m  make_lu.m  parse.m  parse_bounds.m  parse_columns.m  parse_quadobj.m  parse_rhs.m  parse_rows.m  size.m
external_packages/casadi/external_packages/superscs/matlab/@SuperSCSConfig/: SuperSCSConfig.m  profile_ops.m
external_packages/casadi/external_packages/superscs/matlab/scs-yaml/: example.yml  problem_from_yaml.m  problem_to_yaml.m  test_sparse.m
external_packages/casadi/external_packages/superscs/nbproject/: configurations.xml  project.xml
external_packages/casadi/external_packages/superscs/pages/: basic_doc_page.h  benchmarks_page.h  cones_page.h  contributing_page.h  cvx_examples_page.h  directions_page.h  examples_c_page.h  logging_page.h  mainpage.h  maros_meszaros_page.h  profiling_page.h  save_load_page.h  sparse_martrices_page.h  superscs_page.h  termination_page.h  unbdd_infeas_page.h  warm_starting_page.h
external_packages/casadi/external_packages/superscs/python/: README.md  main.py  mem.py  scsmodule.c  setup.py  superscs.py  test_scs_basic.py  test_scs_rand.py  test_scs_sdp.py  test_superscs.py
external_packages/casadi/external_packages/superscs/src/: cones.c  cs.c  ctrlc.c  directions.c  linAlg.c  scs.c  scs_parser.c  scs_version.c  unit_test_util.c  util.c
external_packages/casadi/external_packages/superscs/tests/: README.md
external_packages/casadi/external_packages/superscs/tests/c/: README.txt  test_broyden.c  test_broyden.h  test_dummy.c  test_dummy.h  test_runner_dir.c  test_runner_dir.h  test_superscs.c  test_superscs.h  test_utilities.c  test_utilities.h
(+3761 files in other folders)
